--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
     "downloadjs": "^1.4.7",
-    "node-sass": "^6.0.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
@@ -22,6 +23,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
