--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
+    "dotenv": "^16.0.1",
     "downloadjs": "^1.4.7",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
