--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.3",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
     "dotenv": "^16.0.1",
@@ -25,6 +28,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -50,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.15"
   }
 }
