--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.19",
     "react-paypal-button-v2": "^2.6.3",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "typescript": "^4.7.4"
   }
 }
